--- a/a/aq/aqu/aquaveo.com.html
+++ b/a/aq/aqu/aquaveo.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the aquaveo.com privacy policy that was archived on 2017-06-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170623085203id_/http%3A//aquaveo.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the aquaveo.com privacy policy that was archived on 2017-08-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170809194326id_/https%3A//aquaveo.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en" dir="ltr"><head>
   <meta charset="utf-8">
@@ -10,63 +10,64 @@
 <link rel="shortlink" href="http://www.aquaveo.com/node/71">
   <title>Aquaveo Privacy Statement | Aquaveo.com</title>
   <style type="text/css" media="all">
-@import url("http://www.aquaveo.com/modules/system/system.base.css?orwqbs");
-@import url("http://www.aquaveo.com/modules/system/system.menus.css?orwqbs");
-@import url("http://www.aquaveo.com/modules/system/system.messages.css?orwqbs");
-@import url("http://www.aquaveo.com/modules/system/system.theme.css?orwqbs");
+@import url("http://www.aquaveo.com/modules/system/system.base.css?otrcee");
+@import url("http://www.aquaveo.com/modules/system/system.menus.css?otrcee");
+@import url("http://www.aquaveo.com/modules/system/system.messages.css?otrcee");
+@import url("http://www.aquaveo.com/modules/system/system.theme.css?otrcee");
 </style>
 <style type="text/css" media="all">
-@import url("http://www.aquaveo.com/modules/date/date_api/date.css?orwqbs");
-@import url("http://www.aquaveo.com/modules/field/theme/field.css?orwqbs");
-@import url("http://www.aquaveo.com/modules/node/node.css?orwqbs");
-@import url("http://www.aquaveo.com/modules/search/search.css?orwqbs");
-@import url("http://www.aquaveo.com/sites/all/modules/ubercart/uc_order/uc_order.css?orwqbs");
-@import url("http://www.aquaveo.com/sites/all/modules/ubercart/uc_product/uc_product.css?orwqbs");
-@import url("http://www.aquaveo.com/sites/all/modules/ubercart/uc_store/uc_store.css?orwqbs");
-@import url("http://www.aquaveo.com/modules/user/user.css?orwqbs");
-@import url("http://www.aquaveo.com/modules/views/css/views.css?orwqbs");
+@import url("http://www.aquaveo.com/modules/date/date_api/date.css?otrcee");
+@import url("http://www.aquaveo.com/modules/field/theme/field.css?otrcee");
+@import url("http://www.aquaveo.com/modules/node/node.css?otrcee");
+@import url("http://www.aquaveo.com/modules/search/search.css?otrcee");
+@import url("http://www.aquaveo.com/sites/all/modules/ubercart/uc_order/uc_order.css?otrcee");
+@import url("http://www.aquaveo.com/sites/all/modules/ubercart/uc_product/uc_product.css?otrcee");
+@import url("http://www.aquaveo.com/sites/all/modules/ubercart/uc_store/uc_store.css?otrcee");
+@import url("http://www.aquaveo.com/modules/user/user.css?otrcee");
+@import url("http://www.aquaveo.com/modules/views/css/views.css?otrcee");
 </style>
 <style type="text/css" media="all">
-@import url("http://www.aquaveo.com/modules/ctools/css/ctools.css?orwqbs");
+@import url("http://www.aquaveo.com/modules/ctools/css/ctools.css?otrcee");
 </style>
 <style type="text/css" media="all">
-@import url("http://www.aquaveo.com/sites/all/themes/touch/style-js-image-slider.css?orwqbs");
-@import url("http://www.aquaveo.com/sites/all/themes/touch/style.css?orwqbs");
-@import url("http://www.aquaveo.com/sites/all/themes/touch/style-page-specific.css?orwqbs");
-@import url("http://www.aquaveo.com/sites/all/themes/touch/style-aquaveo-header.css?orwqbs");
-@import url("http://www.aquaveo.com/sites/all/themes/touch/style-product-navigation.css?orwqbs");
-@import url("http://www.aquaveo.com/sites/all/themes/touch/style-new-product-navigation.css?orwqbs");
-@import url("http://www.aquaveo.com/sites/all/themes/touch/style-environment-navigation.css?orwqbs");
-@import url("http://www.aquaveo.com/sites/all/themes/touch/style-promo-zoom.css?orwqbs");
-@import url("http://www.aquaveo.com/sites/all/themes/touch/style-pricing.css?orwqbs");
-@import url("http://www.aquaveo.com/sites/all/themes/touch/style-SpryTabbedPanels.css?orwqbs");
-@import url("http://www.aquaveo.com/sites/all/themes/touch/style-new.css?orwqbs");
-@import url("http://www.aquaveo.com/sites/all/themes/touch/style-aqtabs.css?orwqbs");
-@import url("http://www.aquaveo.com/sites/all/themes/touch/style-ahgw.css?orwqbs");
-@import url("http://www.aquaveo.com/sites/all/themes/touch/style-navigation.css?orwqbs");
-@import url("http://www.aquaveo.com/sites/all/themes/touch/style-gms.css?orwqbs");
-@import url("http://www.aquaveo.com/sites/all/themes/touch/style-sms.css?orwqbs");
-@import url("http://www.aquaveo.com/sites/all/themes/touch/style-wms.css?orwqbs");
+@import url("http://www.aquaveo.com/sites/all/themes/touch/style-js-image-slider.css?otrcee");
+@import url("http://www.aquaveo.com/sites/all/themes/touch/style.css?otrcee");
+@import url("http://www.aquaveo.com/sites/all/themes/touch/style-page-specific.css?otrcee");
+@import url("http://www.aquaveo.com/sites/all/themes/touch/style-aquaveo-header.css?otrcee");
+@import url("http://www.aquaveo.com/sites/all/themes/touch/style-product-navigation.css?otrcee");
+@import url("http://www.aquaveo.com/sites/all/themes/touch/style-new-product-navigation.css?otrcee");
+@import url("http://www.aquaveo.com/sites/all/themes/touch/style-environment-navigation.css?otrcee");
+@import url("http://www.aquaveo.com/sites/all/themes/touch/style-promo-zoom.css?otrcee");
+@import url("http://www.aquaveo.com/sites/all/themes/touch/style-pricing.css?otrcee");
+@import url("http://www.aquaveo.com/sites/all/themes/touch/style-SpryTabbedPanels.css?otrcee");
+@import url("http://www.aquaveo.com/sites/all/themes/touch/style-new.css?otrcee");
+@import url("http://www.aquaveo.com/sites/all/themes/touch/style-aqtabs.css?otrcee");
+@import url("http://www.aquaveo.com/sites/all/themes/touch/style-ahgw.css?otrcee");
+@import url("http://www.aquaveo.com/sites/all/themes/touch/style-navigation.css?otrcee");
+@import url("http://www.aquaveo.com/sites/all/themes/touch/style-gms.css?otrcee");
+@import url("http://www.aquaveo.com/sites/all/themes/touch/style-sms.css?otrcee");
+@import url("http://www.aquaveo.com/sites/all/themes/touch/style-wms.css?otrcee");
+@import url("http://www.aquaveo.com/sites/all/themes/touch/style-aqboxes.css?otrcee");
 </style>
 
 <!--[if lt IE 9]>
 <style type="text/css" media="all">
-@import url("http://www.aquaveo.com/sites/all/themes/touch/style-ie.css?orwqbs");
+@import url("http://www.aquaveo.com/sites/all/themes/touch/style-ie.css?otrcee");
 </style>
 <![endif]-->
   <script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="http://www.aquaveo.com/modules/jquery_update/replace/jquery/1.10/jquery.min.js?v=1.10.2"></script>
 <script type="text/javascript" src="http://www.aquaveo.com/misc/jquery.once.js?v=1.2"></script>
-<script type="text/javascript" src="http://www.aquaveo.com/misc/drupal.js?orwqbs"></script>
-<script type="text/javascript" src="http://www.aquaveo.com/modules/google_analytics/googleanalytics.js?orwqbs"></script>
+<script type="text/javascript" src="http://www.aquaveo.com/misc/drupal.js?otrcee"></script>
+<script type="text/javascript" src="http://www.aquaveo.com/modules/google_analytics/googleanalytics.js?otrcee"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 (function(i,s,o,g,r,a,m){i["GoogleAnalyticsObject"]=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,"script","//www.google-analytics.com/analytics.js","ga");ga("create", "UA-6055901-1", {"cookieDomain":"auto"});ga("send", "pageview");
 //--><!]]>
 </script>
-<script type="text/javascript" src="http://www.aquaveo.com/sites/all/themes/touch/js/scrolltopcontrol.js?orwqbs"></script>
+<script type="text/javascript" src="http://www.aquaveo.com/sites/all/themes/touch/js/scrolltopcontrol.js?otrcee"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"touch","theme_token":"ma1OKuV6gPGC_CSYTZkCY1tIpAocZWU8SOPub4_ifOo","js":{"modules\/jquery_update\/replace\/jquery\/1.10\/jquery.min.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1,"modules\/google_analytics\/googleanalytics.js":1,"0":1,"sites\/all\/themes\/touch\/js\/scrolltopcontrol.js":1},"css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"modules\/date\/date_api\/date.css":1,"modules\/field\/theme\/field.css":1,"modules\/node\/node.css":1,"modules\/search\/search.css":1,"sites\/all\/modules\/ubercart\/uc_order\/uc_order.css":1,"sites\/all\/modules\/ubercart\/uc_product\/uc_product.css":1,"sites\/all\/modules\/ubercart\/uc_store\/uc_store.css":1,"modules\/user\/user.css":1,"modules\/views\/css\/views.css":1,"modules\/ctools\/css\/ctools.css":1,"sites\/all\/themes\/touch\/style-js-image-slider.css":1,"sites\/all\/themes\/touch\/style.css":1,"sites\/all\/themes\/touch\/style-page-specific.css":1,"sites\/all\/themes\/touch\/style-aquaveo-header.css":1,"sites\/all\/themes\/touch\/style-product-navigation.css":1,"sites\/all\/themes\/touch\/style-new-product-navigation.css":1,"sites\/all\/themes\/touch\/style-environment-navigation.css":1,"sites\/all\/themes\/touch\/style-promo-zoom.css":1,"sites\/all\/themes\/touch\/style-pricing.css":1,"sites\/all\/themes\/touch\/style-SpryTabbedPanels.css":1,"sites\/all\/themes\/touch\/style-new.css":1,"sites\/all\/themes\/touch\/style-aqtabs.css":1,"sites\/all\/themes\/touch\/style-ahgw.css":1,"sites\/all\/themes\/touch\/style-navigation.css":1,"sites\/all\/themes\/touch\/style-gms.css":1,"sites\/all\/themes\/touch\/style-sms.css":1,"sites\/all\/themes\/touch\/style-wms.css":1,"sites\/all\/themes\/touch\/style-ie.css":1}},"googleanalytics":{"trackOutbound":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|arc|arj|asf|asx|avi|bin|csv|doc(x|m)?|dot(x|m)?|exe|flv|gif|gz|gzip|hqx|jar|jpe?g|js|mp(2|3|4|e?g)|mov(ie)?|msi|msp|pdf|phps|png|ppt(x|m)?|pot(x|m)?|pps(x|m)?|ppam|sld(x|m)?|thmx|qtm?|ra(m|r)?|sea|sit|tar|tgz|torrent|txt|wav|wma|wmv|wpd|xls(x|m|b)?|xlt(x|m)|xlam|xml|z|zip"}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"touch","theme_token":"InZ5IXqH_yrdTrdu7DklbWSiPUX3H7y4p30DFMKQRLQ","js":{"modules\/jquery_update\/replace\/jquery\/1.10\/jquery.min.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1,"modules\/google_analytics\/googleanalytics.js":1,"0":1,"sites\/all\/themes\/touch\/js\/scrolltopcontrol.js":1},"css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"modules\/date\/date_api\/date.css":1,"modules\/field\/theme\/field.css":1,"modules\/node\/node.css":1,"modules\/search\/search.css":1,"sites\/all\/modules\/ubercart\/uc_order\/uc_order.css":1,"sites\/all\/modules\/ubercart\/uc_product\/uc_product.css":1,"sites\/all\/modules\/ubercart\/uc_store\/uc_store.css":1,"modules\/user\/user.css":1,"modules\/views\/css\/views.css":1,"modules\/ctools\/css\/ctools.css":1,"sites\/all\/themes\/touch\/style-js-image-slider.css":1,"sites\/all\/themes\/touch\/style.css":1,"sites\/all\/themes\/touch\/style-page-specific.css":1,"sites\/all\/themes\/touch\/style-aquaveo-header.css":1,"sites\/all\/themes\/touch\/style-product-navigation.css":1,"sites\/all\/themes\/touch\/style-new-product-navigation.css":1,"sites\/all\/themes\/touch\/style-environment-navigation.css":1,"sites\/all\/themes\/touch\/style-promo-zoom.css":1,"sites\/all\/themes\/touch\/style-pricing.css":1,"sites\/all\/themes\/touch\/style-SpryTabbedPanels.css":1,"sites\/all\/themes\/touch\/style-new.css":1,"sites\/all\/themes\/touch\/style-aqtabs.css":1,"sites\/all\/themes\/touch\/style-ahgw.css":1,"sites\/all\/themes\/touch\/style-navigation.css":1,"sites\/all\/themes\/touch\/style-gms.css":1,"sites\/all\/themes\/touch\/style-sms.css":1,"sites\/all\/themes\/touch\/style-wms.css":1,"sites\/all\/themes\/touch\/style-aqboxes.css":1,"sites\/all\/themes\/touch\/style-ie.css":1}},"googleanalytics":{"trackOutbound":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|arc|arj|asf|asx|avi|bin|csv|doc(x|m)?|dot(x|m)?|exe|flv|gif|gz|gzip|hqx|jar|jpe?g|js|mp(2|3|4|e?g)|mov(ie)?|msi|msp|pdf|phps|png|ppt(x|m)?|pot(x|m)?|pps(x|m)?|ppam|sld(x|m)?|thmx|qtm?|ra(m|r)?|sea|sit|tar|tgz|torrent|txt|wav|wma|wmv|wpd|xls(x|m|b)?|xlt(x|m)|xlam|xml|z|zip"}});
 //--><!]]>
 </script>
   <!--[if lt IE 9]>
