--- a/s/sq/sql/sqlmaestro.com.html
+++ b/s/sq/sql/sqlmaestro.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the sqlmaestro.com privacy policy that was archived on 2017-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606143012id_/http%3A//www.sqlmaestro.com/contacts/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sqlmaestro.com privacy policy that was archived on 2017-08-10.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170810224951id_/https%3A//www.sqlmaestro.com/contacts/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -11,9 +11,9 @@
 <meta name="copyright" content="SQL Maestro Group">
 <link rel="shortcut icon" href="/favicon.ico">
 <link rel="alternate" type="application/rss+xml" title="RSS" href="rss.xml">
-<link rel="stylesheet" type="text/css" href="/sqlmaestro.css?m=1495189679">
+<link rel="stylesheet" type="text/css" href="/sqlmaestro.css?m=1497626771">
 <link rel="stylesheet" type="text/css" href="/syntax.css">
-<script async="" src="https://call.chatra.io/chatra.js"></script><script async="" src="https://www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="/nav.js"></script>
+<script async="" src="https://www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="/nav.js"></script>
 <script type="text/javascript" src="/block.js"></script>
 <!-- <script type="text/javascript" src="/sm_countdowntimer.js"></script> -->
 <script type="text/javascript">
@@ -181,10 +181,8 @@ var FilledRequiredFields = 'Please fill all the required fields!';
 	<div class="announce_block">
 		<div class="block_title"><img id="testimonials_arr" onclick="ChangeStatus('testimonials');" src="/i/arr-open.gif" width="16" height="16" align="right">Testimonials</div>
 		<div id="testimonials" class="block_inside">
-			<div class="testimonial"><strong>Johnson Sieu:</strong> "Your PHP Generator is the BEST that I have used so far. It is affordable and user-friendly. Congratulation for coming up with such a fine product.  I will not hesitate to introduce it to my peers".</div>
-			<div class="testimonial"><strong>Jeff Rule:</strong> "I have to tell you I am really impressed.  I have never had a software
-company turn around a bug fix like this so fast.  I have been doing
-database work for over 20 years and that has never happened.".</div>
+			<div class="testimonial"><strong>Phillip Magger:</strong> "A word of congratulations. I think that your Firebird Data Wizard is some of the best stuff I have ever used. I was in search of an easy-used tool, and I found it. It is a good solution".</div>
+			<div class="testimonial"><strong>Richard Fallerman:</strong> "The assistance we got from SQL Maestro Group played a major part in helping us to meet our objectives. The quality of software for managing Microsoft SQL data was outstanding".</div>
 			<p><a href="products/testimonials/" class="arr_after">More</a></p>
 			<p><a href="contacts/" class="arr_after" rel="nofollow">Add your opinion</a></p>
 		</div>
@@ -197,15 +195,15 @@ database work for over 20 years and that has never happened.".</div>
 		<div class="block_title"><img id="customers_arr" onclick="ChangeStatus('customers');" src="/i/arr-open.gif" width="16" height="16" align="right">Customers</div>
 		<div id="customers" class="block_inside">
 			<div class="cust">
-				<a href="customers/"><img src="/data/4773/1dd38fead5784b83338af79351e7dbd4.gif" border="0"></a>
+				<a href="customers/"><img src="/data/4773/1201782960-unhan.gif" border="0"></a>
 			</div>
 			<div class="news_separator"></div>
 			<div class="cust">
-				<a href="customers/"><img src="/data/4773/1201780643-Ohio_university.gif" border="0"></a>
+				<a href="customers/"><img src="/data/4773/09c7c97d5951d5933e8345783a8d4cff.gif" border="0"></a>
 			</div>
 			<div class="news_separator"></div>
 			<div class="cust">
-				<a href="customers/"><img src="/data/4773/1201697782-AT&amp;T.gif" border="0"></a>
+				<a href="customers/"><img src="/data/4773/51f378c46d4795e8f2d004d48a896e30.gif" border="0"></a>
 			</div>
 			<div class="news_separator"></div>
 			<p align="left"><a href="customers/" class="arr_after">More</a></p>
@@ -258,21 +256,21 @@ Privacy policy
 	<div class="block_title"><img id="news_1_arr" onclick="ChangeStatus('news_1');" src="/i/arr-open.gif" width="16" height="16" align="right">Company news<a href="rss.xml" style="margin-left:10px; position:relative; top:2px;"><img src="/i/rss.gif" width="30" height="14" border="0"></a></div>
 	<div class="block_inside" id="news_1">
 		<div class="news">
+			<div class="date">Jun 29, 2017</div>
+			<div class="title"><a href="news/company/mssql_maestro_17_6_released/"><strong>MS SQL Maestro 17.6 released</strong></a></div>
+			<div>New version features support for SQL Server 2017, support for row-level security policies, custom labels and colors for server nodes in Database Explorer, and some other useful things.</div>
+		</div>
+		<div class="news_separator"></div>
+		<div class="news">
+			<div class="date">Jun 23, 2017</div>
+			<div class="title"><a href="news/company/php_generators_16_9_0_7_released/"><strong>PHP Generators 16.9.0.7 released</strong></a></div>
+			<div>New version comes with optimized column filter, custom password encryption, enhanced event editor, new and updated events, auto-logout after an inactivity time and other new features.</div>
+		</div>
+		<div class="news_separator"></div>
+		<div class="news">
 			<div class="date">May 22, 2017</div>
 			<div class="title"><a href="news/company/sql_maestro_for_mysql_17_5_released/"><strong>SQL Maestro for MySQL 17.5 released</strong></a></div>
 			<div>New version features direct support for a number of MariaDB new features like roles, check constraints and virtual columns; support for roles added in MySQL&nbsp;8.0, usage statistics for database profile and some other useful things.</div>
-		</div>
-		<div class="news_separator"></div>
-		<div class="news">
-			<div class="date">Apr 10, 2017</div>
-			<div class="title"><a href="news/company/code_factories_17_4_released/"><strong>Code Factories advanced to version 17.4</strong></a></div>
-			<div>New version features colored tabs, new encryption algorithms in data grids, enhanced data input forms, updated data export/import tools and a lot of other useful things.</div>
-		</div>
-		<div class="news_separator"></div>
-		<div class="news">
-			<div class="date">Mar 22, 2017</div>
-			<div class="title"><a href="news/company/php_generators_16_9_0_5_released/"><strong>PHP Generators 16.9.0.5 uploaded</strong></a></div>
-			<div>New version allows you to grant custom permissions at page and record level. It also features enhanced Quick Filter tool, a possibility of printing selected records, a number of updated controls and other useful things.</div>
 		</div>
 		<div style="padding-top:10px;"><a href="news/company/" class="arr_after">More news</a></div>
 	</div>
@@ -285,15 +283,15 @@ Privacy policy
 		<div class="block_title"><img id="features_block_arr" onclick="ChangeStatus('features_block');" src="/i/arr-open.gif" width="16" height="16" align="right">Feature of the day</div>
 		<div id="features_block" class="block_inside">
 			<div class="feature">
-				<div class="title"><a href="products/sqlite/codefactory/screenshots/getting_started/sql_script_editor/"><b class="blue">Syntax highlighting </b></a></div>
-				<div style="padding-bottom:5px;"><a href="products/sqlite/codefactory/screenshots/getting_started/sql_script_editor/"><img src="/data/4293/1178548779-170x103.png" width="170" height="103"></a></div>
-				<div>SQLite Code Factory provides syntax highlighting  to prevent mistakes in syntax at once.</div>
+				<div class="title"><a href="products/postgresql/maestro/screenshots/getting_started/process_browser/"><b class="blue">Process Browser</b></a></div>
+				<div style="padding-bottom:5px;"><a href="products/postgresql/maestro/screenshots/getting_started/process_browser/"><img src="/data/4433/1182596972-170x109.png" width="170" height="109"></a></div>
+				<div>PostgreSQL Maestro introduces Process Browser, a tool for DBAs who want to monitor the users' activity.</div>
 			</div>
 			<div class="feature_separator"></div>
 			<div class="feature">
-				<div class="title"><a href="products/sql_anywhere/phpgenerator/screenshots/common/master_detail_presentation/"><b class="blue">Master-detail presentations</b></a></div>
-				<div style="padding-bottom:5px;"><a href="products/sql_anywhere/phpgenerator/screenshots/common/master_detail_presentation/"><img src="/data/6067/1260950756-170x90.png" width="170" height="90"></a></div>
-				<div>PHP Generator supports master-detail presentations used to display a list of detail records related to a selected record on the page.</div>
+				<div class="title"><a href="products/sql_anywhere/maestro/help/01_04_00_object_browser/"><b class="blue">Multiple Operations</b></a></div>
+				<div style="padding-bottom:5px;"><a href="products/sql_anywhere/maestro/help/01_04_00_object_browser/"><img src="/data/5457/1219154434-170x162.png" width="170" height="162"></a></div>
+				<div>ASA Mastro: along with sorting, grouping and filtering abilities Object Browser allows you to select several database objects to perform the same operation upon all of them at a time.</div>
 			</div>
 		</div>
 	</div>
@@ -309,15 +307,6 @@ Privacy policy
 </td>
 </tr>
 </tbody></table>
-<!-- Chatra  --><script>    ChatraID = 'AhEYzSwoo2WQmfPzS';
-    (function(d, w, c) {        var n = d.getElementsByTagName('script')[0],
-            s = d.createElement('script');        w[c] = w[c] || function() {
-            (w[c].q = w[c].q || []).push(arguments);        };
-        s.async = true;
-        s.src = (d.location.protocol === 'https:' ? 'https:': 'http:')
-            + '//call.chatra.io/chatra.js';
-        n.parentNode.insertBefore(s, n);    })(document, window, 'Chatra');
-</script><!-- /Chatra {/literal} -->
 
 
 
