--- a/a/ar/art/artipot.com.html
+++ b/a/ar/art/artipot.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the artipot.com privacy policy that was archived on 2017-06-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170608123143id_/http%3A//artipot.com/info/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the artipot.com privacy policy that was archived on 2017-08-11.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170811065603id_/http%3A//www.artipot.com/info/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>Artipot Privacy Policy</title>
 <meta name="description" content="Artipot allows authors to submit their quality articles for free publication and maximum exposure. Find free articles for your website and newsletters.">
